# export-lib

./: .gitignore  .travis.yml  README.md  demo.py  demo_result.xlsx  pyproject.toml  requirements.txt  setup.py
demo/: demo.py  demo.xlsx  demo_csv.py  demo_other.py  demo_pdf.py  demo_pdf_from_json.py  demo_result.xlsx  demo_schematics.py  demo_schematics.xlsx  demo_schematics_export.py  demo_schematics_import.py  demo_schematics_import.xlsx  demo_template.py  demo_template.xlsx  demo_template_csv.csv  demo_trans.py  demo_translate.xlsx
demo/resources/: input.json  template.csv
demo_resources/: template.xlsx  tpl.xlsx
export_util/: __init__.py  normalize.py  template.py  utility.py  value.py  writer.py
export_util/test/: test.py
export_util/utility/: __init__.py  misc.py  schematics.py
