[tool.poetry]
name = "export-lib"
version = "0.4"
description = ""
authors = ["bmat tvav"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
openpyxl = "^3.0.9"
schematics = "^2.1.1"
reportlab = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
